fixes column alignment

--- a/src/index.scss
+++ b/src/index.scss
@@ -49,6 +49,13 @@ h3 {
   will-change: overflow;
 }
 
+.content {
+  max-width: 700px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
 .column {
   overflow: auto;
   height: auto;
